@@ -161,6 +161,9 @@ also want to use all the logical processors but one for that task so that
 the system stays responsive for other applications.
 .IP "\fB\-c password, \-\-cryptpass=password\fP"
 Encrypt/decrypt data in archive. Password length: 6 to 64 chars.
+You can either provide a real password or a dash ("-c -") with this option
+if you do not want to provide the password in the command line and you
+want to be prompted for a password in the terminal instead.
 
 .SH EXAMPLES
 
